--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2018"
 
 [dependencies]
 derive_more = "0.99.11"
+
+[features]
+# Matches the CSCI 335 SSBC's behavior by default (twos complement).
+# Enabling this feature match the CSCI 261 SSBC's behavior.
+signedmagnitude_sub = []
